--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "buefy": "^0.8.9",
     "core-js": "^3.6.3",
     "firebase": "^7.6.2",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuefire": "^2.2.1"
