--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "l",
-  "version": "0.1.0",
+  "name": "Laundry",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
